@@ -668,7 +668,7 @@ usage for each package
 when displaying actions preview prompt, display also reasons why this action was
 considered to perform
 
-Corresponding configuration option: L<cupt::resolver::track-reasons>
+Corresponding configuration option: L<cupt::console::actions-preview::show-reasons>
 
 =item --show-not-preferred
 
